
* docutils/parsers/rst/directives/tables.py:

  - Added "list-table" directive.
  - Caught empty CSV table bug.
  - Added support for the ``file_insertion_enabled`` setting in the
    "csv-table" directive.
  - Added ``stub-columns`` option to "csv-table" and "list-table"
    directives.

* docutils/parsers/rst/languages/nl.py: Added to project; Dutch
  mappings by Martijn Pieters.

* docutils/transforms/references.py:

  - Fixed mislocated internal targets bug, by propagating internal
    targets to the next node, making use of the newly added support
    for multiple names and IDs.
  - Fixed duplicate footnote label bug.
  - Replaced ``ChainedTargets`` with more generic ``PropagateTargets``
    transform.

* docutils/writers/html4css1.py:

  - Fixed unencoded stylesheet reference bug (characters like "&" in
    stylesheet references).
  - ``target`` nodes now appear as ``span`` tags (instead of ``a``
    tags).
  - Added support for multiple IDs per node by creating empty ``span``
    tags.
  - Added the ``field_name_limit`` & ``option_limit`` settings &
    support.
  - Added support for table stub columns.
  - Added support for the ``align`` attribute on ``figure`` elements.
  - Added the ``cloak_email_addresses`` setting & support.
  - Added ``html_prolog``, ``html_head``, ``html_body``,
    ``html_title``, & ``html_subtitle`` to parts dictionary exposed by
    ``docutils.core.publish_parts``.

* docutils/writers/latex2e.py:

  - Improved --use-latex-docinfo so that organization/contact/address
    fields are lumped with the last author field and appear on the
    titlepage.
  - Made sure the titlepage is always shown with --use-latex-docinfo,
    even if the document has no title.
  - Made sure that latex doesn't fill in today's date if no date field
    was given.

* docutils/writers/null.py: Added to project; a do-nothing Writer.

* docs/api/publisher.txt:

  - Added "``publish_parts`` Details" section.

* docs/ref/docutils.dtd:
