@@ -463,6 +463,14 @@ _`doctitle_xform`
 
     Default: enabled (1).  Options: ``--no-doc-title``.
 
+_`sectsubtitle_xform`
+
+    Enable or disable the promotion of the title of a lone subsection
+    to a subtitle (docutils.transforms.frontmatter.SectSubTitle).
+
+    Default: disabled (0).  Options: ``--section-subtitle,
+    --no-section-subtitle``.
+
 
 [pep reader]
 ````````````
